--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation "androidx.media3:media3-common:1.0.0-alpha01"
 
     // Image Loading
-    implementation "io.coil-kt:coil:1.4.0"
+    implementation 'io.coil-kt:coil:1.4.0'
+    implementation 'io.coil-kt:coil-compose:1.4.0'
     implementation 'jp.wasabeef.transformers:coil:1.0.4'
     implementation 'jp.wasabeef.transformers:coil-gpu:1.0.4'
 
