--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer:1.0.0-alpha01"
     implementation "androidx.media3:media3-session:1.0.0-alpha01"
     implementation "androidx.media3:media3-common:1.0.0-alpha01"
+    implementation "com.github.Kaned1as:jaudiotagger:2.3.15"
 
     // Image Loading
     implementation 'io.coil-kt:coil:1.4.0'
@@ -81,7 +82,7 @@ dependencies {
     implementation 'jp.wasabeef.transformers:coil-gpu:1.0.4'
 
     // Navigation Component
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha02"
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
 
     // Room
     implementation "androidx.room:room-runtime:2.4.1"
