--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 *.iml
 .gradle
 /local.properties
+/.idea/deploymentTargetDropDown.xml
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/misc.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
