--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core:1.1.1"
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
 
+    //Component
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
 
     // Debugging
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -86,11 +89,8 @@ dependencies {
     implementation 'jp.wasabeef.transformers:coil:1.0.4'
     implementation 'jp.wasabeef.transformers:coil-gpu:1.0.4'
 
-    // Navigation Component
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
-
     // Room
-    implementation "androidx.room:room-runtime:2.4.1"
-    implementation "androidx.room:room-ktx:2.4.1"
-    kapt "androidx.room:room-compiler:2.4.1"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 }
