--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.compose.ui:ui:1.1.1"
     implementation "androidx.compose.material:material:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "androidx.activity:activity-compose:1.4.0"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
 
@@ -65,10 +65,12 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.1.1"
     implementation "androidx.compose.material:material-icons-core:1.1.1"
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
+    implementation 'androidx.compose.material3:material3:1.0.0-alpha06'
 
     //Component
+    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
 
     // Debugging
     implementation 'com.jakewharton.timber:timber:5.0.1'
