--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_3_round"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.MediaPlayer">
+        android:theme="@style/Theme.App.SplashScreen">
 
         <service
             android:name="com.kylentt.mediaplayer.domain.service.MusicService"
@@ -36,7 +36,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MediaPlayer"
+            android:theme="@style/Theme.App.SplashScreen"
             android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
