--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation "androidx.activity:activity-compose:1.4.0"
+    implementation 'com.google.android.material:material:1.5.0'
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
@@ -64,13 +65,13 @@ dependencies {
     // Compose
     implementation "androidx.compose.foundation:foundation:1.1.1"
     implementation "androidx.compose.material:material-icons-core:1.1.1"
-    implementation "androidx.compose.material:material-icons-extended:1.1.1"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha06'
 
     //Component
     implementation "androidx.core:core-splashscreen:1.0.0-beta01"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
+    implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
 
     // Debugging
     implementation 'com.jakewharton.timber:timber:5.0.1'
