--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
     buildFeatures {
         compose true
@@ -48,6 +49,8 @@ android {
 }
 
 dependencies {
+    // alpha03 throwing Lifecycle Error
+    def composeNavigation = "2.5.0-alpha01"
 
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.compose.ui:ui:1.1.1"
@@ -69,7 +72,9 @@ dependencies {
 
     //Component
     implementation "androidx.core:core-splashscreen:1.0.0-beta01"
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
+
+    //noinspection GradleDependency
+    implementation "androidx.navigation:navigation-compose:$composeNavigation"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
 
