--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     // Compose
     implementation "androidx.compose.foundation:foundation:1.1.1"
     implementation "androidx.compose.material:material-icons-core:1.1.1"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha06'
+    implementation 'androidx.compose.material3:material3:1.0.0-alpha07'
 
     //Component
     implementation "androidx.core:core-splashscreen:1.0.0-beta01"
@@ -92,6 +92,7 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer:1.0.0-alpha01"
     implementation "androidx.media3:media3-session:1.0.0-alpha01"
     implementation "androidx.media3:media3-common:1.0.0-alpha01"
+    implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
     implementation "com.github.Kaned1as:jaudiotagger:2.3.15"
 
     // Image Loading
