--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,60 +49,81 @@ android {
 }
 
 dependencies {
-    // alpha03 throwing Lifecycle Error
-    def composeNavigation = "2.5.0-alpha01"
 
     // Default
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation "androidx.activity:activity-compose:1.4.0"
-    implementation 'com.google.android.material:material:1.5.0'
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    dependencies {
+        implementation "androidx.core:core-ktx:1.7.0"
+        implementation "androidx.compose.ui:ui:1.1.1"
+        implementation "androidx.compose.material:material:1.1.1"
+        implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+        implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+        implementation "androidx.activity:activity-compose:1.4.0"
+        implementation 'com.google.android.material:material:1.5.0'
+        testImplementation "junit:junit:4.13.2"
+        androidTestImplementation "androidx.test.ext:junit:1.1.3"
+        androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+        androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+        debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    }
+
+    // Core
+    dependencies {
+        implementation "androidx.core:core-splashscreen:1.0.0-beta01"
+    }
 
     // Compose
-    implementation "androidx.compose.foundation:foundation:1.1.1"
-    implementation "androidx.compose.material:material-icons-core:1.1.1"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha07'
+    dependencies {
+        // alpha03 throwing Lifecycle Error
+        def composeNavigation = "2.5.0-alpha01"
+        implementation "androidx.compose.foundation:foundation:1.1.1"
+        implementation "androidx.compose.material:material-icons-core:1.1.1"
+        implementation 'androidx.compose.material3:material3:1.0.0-alpha07'
+        implementation "androidx.navigation:navigation-compose:$composeNavigation"
+    }
 
-    //Component
-    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
-
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-compose:$composeNavigation"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
-    implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
+    // Compose Util
+    dependencies {
+        implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
+        implementation "com.google.accompanist:accompanist-permissions:0.24.3-alpha"
+    }
 
     // Debugging
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    dependencies {
+        implementation 'com.jakewharton.timber:timber:5.0.1'
+    }
 
-    // Dependency Injection
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    // DI
+    dependencies {
+        def dagger_hilt_version = "2.40.5"
+        implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
+        kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt_version"
+        implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+        implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    }
 
     // Media
-    implementation "androidx.media3:media3-exoplayer:1.0.0-alpha01"
-    implementation "androidx.media3:media3-session:1.0.0-alpha01"
-    implementation "androidx.media3:media3-common:1.0.0-alpha01"
-    implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
-    implementation "com.github.Kaned1as:jaudiotagger:2.3.15"
+    dependencies {
+        def media3_version = "1.0.0-alpha01"
+        implementation "androidx.media3:media3-exoplayer:$media3_version"
+        implementation "androidx.media3:media3-session:$media3_version"
+        implementation "androidx.media3:media3-common:$media3_version"
+        implementation "androidx.media3:media3-common:$media3_version"
+        implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
+        implementation "com.github.Kaned1as:jaudiotagger:2.3.15"
+    }
 
     // Image Loading
-    implementation 'io.coil-kt:coil:1.4.0'
-    implementation 'io.coil-kt:coil-compose:1.4.0'
-    implementation 'jp.wasabeef.transformers:coil:1.0.4'
-    implementation 'jp.wasabeef.transformers:coil-gpu:1.0.4'
+    dependencies {
+        implementation 'io.coil-kt:coil:1.4.0'
+        implementation 'io.coil-kt:coil-compose:1.4.0'
+        implementation 'jp.wasabeef.transformers:coil:1.0.4'
+        implementation 'jp.wasabeef.transformers:coil-gpu:1.0.4'
+    }
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.2"
-    implementation "androidx.room:room-ktx:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
+    dependencies {
+        implementation "androidx.room:room-runtime:2.4.2"
+        implementation "androidx.room:room-ktx:2.4.2"
+        kapt "androidx.room:room-compiler:2.4.2"
+    }
 }
