--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
         def composeNavigation = "2.5.0-alpha01"
         implementation "androidx.compose.foundation:foundation:1.1.1"
         implementation "androidx.compose.material:material-icons-core:1.1.1"
+        implementation "androidx.compose.material:material-icons-extended:1.1.1"
         implementation 'androidx.compose.material3:material3:1.0.0-alpha07'
         implementation "androidx.navigation:navigation-compose:$composeNavigation"
     }
