--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:theme="@style/Theme.App.SplashScreen">
 
         <service
-            android:name="com.kylentt.mediaplayer.domain.service.MusicService"
+            android:name="com.kylentt.mediaplayer.domain.mediaSession.service.MusicService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback"
@@ -34,7 +34,7 @@
         </service>
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.mainactivity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen"
             android:launchMode="singleInstance">
