--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,10 +110,11 @@ dependencies {
 
     // Media
     dependencies {
-        def media3_version = "1.0.0-alpha01"
+        def media3_version = "1.0.0-alpha03"
         implementation "androidx.media3:media3-exoplayer:$media3_version"
         implementation "androidx.media3:media3-session:$media3_version"
         implementation "androidx.media3:media3-common:$media3_version"
+        implementation "androidx.media3:media3-ui:$media3_version"
         implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
         implementation "com.github.Kaned1as:jaudiotagger:2.3.15"
     }
