--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -106,14 +107,23 @@ dependencies {
         implementation 'com.jakewharton.timber:timber:5.0.1'
         debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
     }
+    // DataStore
+    dependencies {
+        def version = "1.0.0"
+        implementation "androidx.datastore:datastore:$version"
+    }
 
     // DI
     dependencies {
-        def dagger_hilt_version = "2.40.5"
+        def dagger_hilt_version = "2.41"
         implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
         kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt_version"
-        implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
         implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    }
+
+    // KotlinX
+    dependencies {
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     }
 
     // Media
