--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
-        compose_version = "1.0.1"
+        compose_version = "1.1.1"
     }
 
     dependencies {
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.40.5")
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }
 
@@ -12,7 +13,8 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
 task clean(type: Delete) {
