--- a/app/src/main/kotlin/.editorconfig
+++ b/app/src/main/kotlin/.editorconfig
@@ -6,3 +6,7 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[com/kylentt/musicplayer/**/*compose/**.kt]
+indent_size = 4
+
