--- a/app/src/main/kotlin/.editorconfig
+++ b/app/src/main/kotlin/.editorconfig
@@ -9,6 +9,6 @@ insert_final_newline = true
 max_line_length = 100
 ij_java_wrap_long_lines = true
 
-[com/kylentt/**/**/*compose*/**.kt]
+[com/kylentt/**/*compose*/**.kt]
 indent_size = 4
 
