--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,73 +117,82 @@ dependencies {
 
     // Accompanist
     dependencies {
-        def accompanistVersion = "0.24.3-alpha"
-        def navAnimationVersion = "0.24.4-alpha"
-        def pagerVersion = "0.24.4-alpha"
+        def accompanist_Version = "0.24.3-alpha"
+        def navAnimation_Version = "0.24.4-alpha"
+        def pager_Version = "0.24.4-alpha"
 
-        implementation "com.google.accompanist:accompanist-drawablepainter:$accompanistVersion"
-        implementation "com.google.accompanist:accompanist-navigation-animation:$navAnimationVersion"
-        implementation "com.google.accompanist:accompanist-navigation-material:$accompanistVersion"
-        implementation "com.google.accompanist:accompanist-pager:$pagerVersion"
-        implementation "com.google.accompanist:accompanist-permissions:$accompanistVersion"
-        implementation "com.google.accompanist:accompanist-placeholder:$accompanistVersion"
-        implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanistVersion"
+        implementation "com.google.accompanist:accompanist-drawablepainter:$accompanist_Version"
+        implementation "com.google.accompanist:accompanist-navigation-animation:$navAnimation_Version"
+        implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_Version"
+        implementation "com.google.accompanist:accompanist-pager:$pager_Version"
+        implementation "com.google.accompanist:accompanist-permissions:$accompanist_Version"
+        implementation "com.google.accompanist:accompanist-placeholder:$accompanist_Version"
+        implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_Version"
     }
 
-    // Androidx Extra
+    // Androidx
     dependencies {
-        def splashScreenVersion = "1.0.0-rc01"
-        def startupVersion = "1.1.1"
+        def dataStore_Version = "1.0.0"
+        def hiltCompose_Version = "1.0.0"
+        def splashScreen_Version = "1.0.0-rc01"
+        def startup_Version = "1.1.1"
 
-        implementation "androidx.core:core-splashscreen:$splashScreenVersion"
-        implementation "androidx.startup:startup-runtime:$startupVersion"
+        implementation "androidx.core:core-splashscreen:$splashScreen_Version"
+        implementation "androidx.datastore:datastore:$dataStore_Version"
+        implementation "androidx.hilt:hilt-navigation-compose:$hiltCompose_Version"
+        implementation "androidx.startup:startup-runtime:$startup_Version"
     }
 
-    // Androidx.compose Extra
+    // Androidx.compose
     dependencies {
-        def composeNavigation = "2.5.0-rc01"
-        def composeMaterialVersion = "1.1.1"
-        def composeMaterialIconVersion = "1.2.0-beta02"
-        def composeMaterial3Version = "1.0.0-alpha12"
+        def composeMaterial_Version = "1.1.1"
+        def composeMaterial3_Version = "1.0.0-alpha12"
+        def composeMaterialIcon_Version = "1.2.0-beta02"
 
-        implementation "androidx.compose.foundation:foundation:$composeMaterialVersion"
-        implementation "androidx.compose.material:material-icons-core:$composeMaterialIconVersion"
-        implementation "androidx.compose.material:material-icons-extended:$composeMaterialVersion"
-        implementation "androidx.compose.material3:material3:$composeMaterial3Version"
-        implementation "androidx.navigation:navigation-compose:$composeNavigation"
+        implementation "androidx.compose.foundation:foundation:$composeMaterial_Version"
+        implementation "androidx.compose.material:material-icons-core:$composeMaterialIcon_Version"
+        implementation "androidx.compose.material:material-icons-extended:$composeMaterial_Version"
+        implementation "androidx.compose.material3:material3:$composeMaterial3_Version"
+
+    }
+
+    // Androidx.navigation
+    dependencies {
+        def composeNavigation_Version = "2.5.0-rc01"
+        implementation "androidx.navigation:navigation-compose:$composeNavigation_Version"
+    }
+
+    // Androidx.Room
+    dependencies {
+        def room_Version = "2.4.2"
+
+        implementation "androidx.room:room-runtime:$room_Version"
+        implementation "androidx.room:room-ktx:$room_Version"
+        kapt "androidx.room:room-compiler:$room_Version"
     }
 
     // Debugging
     dependencies {
-        def timberVersion = "5.0.1"
-        def leakCanaryVersion = "2.9.1"
+        def timber_Version = "5.0.1"
+        def leakCanary_Version = "2.9.1"
 
-        implementation "com.jakewharton.timber:timber:$timberVersion"
-        debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+        implementation "com.jakewharton.timber:timber:$timber_Version"
+        debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary_Version"
     }
 
-    // DataStore
+    // Dagger-Hilt
     dependencies {
-        def dataStoreVersion = "1.0.0"
+        def daggerHilt_version = "2.41"
 
-        implementation "androidx.datastore:datastore:$dataStoreVersion"
-    }
-
-    // DI
-    dependencies {
-        def dagger_hilt_version = "2.41"
-        def dagger_hilt_compose_version = "1.0.0"
-
-        implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
-        kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt_version"
-        implementation "androidx.hilt:hilt-navigation-compose:$dagger_hilt_compose_version"
+        implementation "com.google.dagger:hilt-android:$daggerHilt_version"
+        kapt "com.google.dagger:hilt-android-compiler:$daggerHilt_version"
     }
 
     // KotlinX
     dependencies {
-        def serializationVersion = "1.3.2"
+        def serialization_Version = "1.3.2"
 
-        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serializationVersion"
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_Version"
     }
 
     // Media
@@ -203,26 +212,17 @@ dependencies {
 
     // Image Loading
     dependencies {
-        def coilVersion = "1.4.0"
+        def coil_Version = "1.4.0"
 
         /*
         1.0.6 Missing transition property on [coil.request.*RequestOptions],
         called from [coil.compose.ImagePainterKt.updatePainter()]
         */
-        def coilTransformerVersion = "1.0.5"
+        def coilTransformer_Version = "1.0.5"
 
-        implementation "io.coil-kt:coil:$coilVersion"
-        implementation "io.coil-kt:coil-compose:$coilVersion"
-        implementation "jp.wasabeef.transformers:coil:$coilTransformerVersion"
-        implementation "jp.wasabeef.transformers:coil-gpu:$coilTransformerVersion"
-    }
-
-    // Room
-    dependencies {
-        def roomVersion = "2.4.2"
-
-        implementation "androidx.room:room-runtime:$roomVersion"
-        implementation "androidx.room:room-ktx:$roomVersion"
-        kapt "androidx.room:room-compiler:$roomVersion"
+        implementation "io.coil-kt:coil:$coil_Version"
+        implementation "io.coil-kt:coil-compose:$coil_Version"
+        implementation "jp.wasabeef.transformers:coil:$coilTransformer_Version"
+        implementation "jp.wasabeef.transformers:coil-gpu:$coilTransformer_Version"
     }
 }
