--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
-static Properties getProp(File file) {
+Properties getProp(File file) {
     def prop = new Properties()
     if (!file.exists()) {
         throw new IllegalArgumentException("couldn't find $file, make sure File is correct")
@@ -44,6 +44,7 @@ android {
             keyPassword getKeystoreProp()['KEYSTORE_KEY_PASSWORD']
         }
     }
+
     compileSdk 32
 
     defaultConfig {
@@ -69,31 +70,39 @@ android {
             signingConfig signingConfigs.testRelease
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
     sourceSets.all {
         kotlin.srcDir("src/$name/kotlin")
     }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
     namespace 'com.kylentt.mediaplayer'
 }
 
@@ -101,13 +110,13 @@ dependencies {
 
     // Default
     dependencies {
-        implementation "androidx.core:core-ktx:1.7.0"
+        implementation "androidx.core:core-ktx:1.8.0"
         implementation "androidx.compose.ui:ui:1.1.1"
         implementation "androidx.compose.material:material:1.1.1"
         implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
         implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
         implementation "androidx.activity:activity-compose:1.4.0"
-        implementation 'com.google.android.material:material:1.6.0'
+        implementation 'com.google.android.material:material:1.6.1'
         testImplementation "junit:junit:4.13.2"
         androidTestImplementation "androidx.test.ext:junit:1.1.3"
         androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
@@ -146,8 +155,8 @@ dependencies {
     // Androidx.compose
     dependencies {
         def composeMaterial_Version = "1.1.1"
-        def composeMaterial3_Version = "1.0.0-alpha12"
-        def composeMaterialIcon_Version = "1.2.0-beta02"
+        def composeMaterial3_Version = "1.0.0-alpha13"
+        def composeMaterialIcon_Version = "1.2.0-beta03"
 
         implementation "androidx.compose.foundation:foundation:$composeMaterial_Version"
         implementation "androidx.compose.material:material-icons-core:$composeMaterialIcon_Version"
