IDK what happen honestly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,6 +169,13 @@ dependencies {
         kapt "androidx.room:room-compiler:$room_Version"
     }
 
+    // Coroutines
+    dependencies {
+        implementation("com.google.guava:guava:31.0.1-android")
+        implementation("androidx.concurrent:concurrent-futures:1.1.0")
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.6.0")
+    }
+
     // Debugging
     dependencies {
         def timber_Version = "5.0.1"
