--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </provider>
 
         <service
-            android:name="com.kylentt.mediaplayer.domain.mediasession.service.MusicLibraryService"
+            android:name="com.kylentt.mediaplayer.domain.mediasession.libraryservice.MusicLibraryService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback">
