--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <application
         android:name="com.kylentt.mediaplayer.core.app.MediaPlayerApp"
         android:allowBackup="true"
+        android:exported="true"
         android:icon="@mipmap/ic_launcher_3"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_3_round"
