--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </service>
 
         <activity
-            android:name="com.kylentt.mediaplayer.ui.activity.mainactivity.MainActivity"
+            android:name="com.kylentt.musicplayer.ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen"
             android:launchMode="singleTask">
@@ -52,7 +52,7 @@
         </activity>
 
         <activity
-            android:name="com.kylentt.mediaplayer.ui.external.activity.ReceiverActivity"
+            android:name="com.kylentt.musicplayer.ui.receiver.ReceiverActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen">
             <intent-filter>
