--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-FILE_PATH = C:\\Users\\Kyle\\dev\\Android Studio\\key\\testRelease-key.jks
-PASSWORD = 123456
-KEY_ALIAS = key0
-KEY_PASSWORD = 123456
+FILE_PATH = // FILE_PATH_HERE
+PASSWORD = // PASSWORD_HERE
+KEY_ALIAS = // KEY_ALIAS_HERE
+KEY_PASSWORD = // KEY_PASSWORD_HERE
