re-define Theming, utils

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <!-- Other orientation will be supported in the future -->
         <activity
-            android:name="com.flammky.musicplayer.main.MainActivity"
+            android:name="dev.dexsr.klio.android.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen"
             android:launchMode="singleTask">
